add tests WIP deserializeObject